syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.livingit.logsink";
option java_outer_classname = "LogsinkProto";

package logsink;

service LogTransfer {
  rpc SendLine(LineMessage) returns (LineResult) {} 
}

message LineMessage {
  string line = 1;
}

message LineResult {
  bool result = 1;
}